--- a/bower.json
+++ b/bower.json
@@ -1,26 +1,16 @@
 {
   "name": "todo_challenge",
+  "description": "",
   "version": "0.0.0",
-  "homepage": "https://github.com/jjnewman/todo_challenge",
-  "authors": [
-    "Joe Newman"
-  ],
-  "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "homepage": "",
+  "license": "",
+  "private": true,
   "dependencies": {
-    "jquery": "~2.1.3",
-    "bootstrap": "~3.3.4",
-    "angular": "~1.3.15",
-    "angular-resource": "~1.3.15"
-  },
-  "devDependencies": {
-    "angular-mocks": "~1.3.15",
-    "angular-route": "~1.3.15"
+    "angular": "1.3.x",
+    "angular-mocks": "1.3.x",
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.1.1",
+    "angular-route": "1.3.x",
+    "angular-resource": "1.3.x"
   }
 }
